06-DNSpol/test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  labels:
    org: network
    class: tester
spec:
  containers:
  - name: test-container
    image: docker.io/tgraf/netperf
