06-DNSpol/np-test-pod.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "fqdn-rule"
spec:
  endpointSelector:
    matchLabels:
      org: network
      class: tester
  egress:
  - toFQDNs:
    - matchName: "perdus.com"  
  - toEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": kube-system
        "k8s:k8s-app": kube-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: ANY
      rules:
        dns:
        - matchPattern: "*"
